<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">BrainGames</string>
    <string name="action_settings">Settings</string>
    <string name="action_pick_game">Pick Game</string>
    <string name="action_about">About</string>
    <string name="title_activity_about">About</string>
    <string name="about_text">Our games are highly influenced by <a href="http://translimit.co.jp/">BrainWars</a>\' and especially <a href="http://www.lumosity.com/">lumosity</a>\'s games. We want to thank them both for influencing us. Application icon "Brain" designed by <a href="http://www.thenounproject.com/jessie_vp">jessie_vp</a> from the <a href="http://www.thenounproject.com">Noun Project</a>. Sound effects are from <a href="http://www.freesound.org/people/GameAudio/">GameAudio</a> and <a href="http://www.freesound.org/people/junggle/">Junggle</a>.<br />BrainGames is an open source project. You can contribute to BrainWars on <a href="https://github.com/furkantektas/braingames">GitHub!</a></string>
    <string name="title_activity_tut_color_match">Color Match Tutorial</string>
    <string name="start_game">Start</string>
    <string name="replay_button">Replay</string>
    <string name="main_menu_button">Main Menu</string>
    <string name="title_activity_game_memory_matrix">GameMemoryMatrix</string>
    <string name="pick_game_title">Pick a game!</string>
    <string name="new_game_button">New Game</string>
    <string name="button_true">True</string>
    <string name="button_false">False</string>

    <string name="no_game_data_title">Keep playing!</string>
    <string name="no_game_data_title_desc">No games played yet.</string>
    <string name="no_game_data_actionbar">No Game Data</string>
    <!-- Color Match Game Color Names -->
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="orange">Orange</string>
    <string name="blue">Blue</string>
    <string name="yellow">Yellow</string>
    <string name="brown">Brown</string>
    <string name="pink">Pink</string>
    <string name="purple">Purple</string>
    <string name="black">Black</string>
    <string name="white">White</string>
    <string name="same">Same</string>
    <string name="different">Different</string>
    <string name="title_activity_game_result">GameResultActivity</string>
    <string name="high_score">High Score</string>

    <!-- Find Operation Game Operation Names -->
    <string name="addition">Addition</string>
    <string name="extraction">Extraction</string>
    <string name="multiplication">Multiplication</string>
    <string name="division">Division</string>
    <string name="lowerthen">LowerThen</string>
    <string name="higherthen">HigherThen</string>
    <string name="title_activity_stat">StatActivity</string>

</resources>
