<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.furkantektas.braingames.ui.games.GameResultActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/high_score"
        android:visibility="visible"
        android:textColor="@color/orange"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textAllCaps="true"
        android:paddingBottom="20dp"
        android:layout_above="@+id/score_tv"
        android:layout_centerHorizontal="true"
        android:text="@string/high_score" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="60sp"
        android:textColor="@color/purple"
        android:paddingBottom="20dp"
        android:singleLine="true"
        android:id="@+id/score_tv"
        android:text="500" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/replay_button"
            android:id="@+id/replay_button" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_menu_button"
            android:id="@+id/menu_button" />
    </LinearLayout>

</RelativeLayout>
